--- a/src/ui/Arrangement.module.css
+++ b/src/ui/Arrangement.module.css
@@ -15,6 +15,7 @@
   min-width: 20rem;
   width: auto;
   height: auto;
+  background-color: hsl(222 12% 18%);
 }
 
 .timelineRow {
@@ -22,8 +23,8 @@
   height: 2rem;
   min-height: 2rem;
   overflow-y: hidden;
-  margin-bottom: 0.5rem;
   flex: 0;
+  border-bottom: 1px solid hsl(217 19% 27%);
 }
 
 .placeholder {
@@ -36,7 +37,6 @@
   height: 3rem;
   min-height: 3rem;
   width: auto;
-  /* background: #ccc; */
   display: flex;
   overflow-x: scroll;
 }
@@ -61,6 +61,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: hsl(222 12% 15%);
 }
 
 .trackScroll {
@@ -69,7 +70,6 @@
   flex: 1;
   overflow-x: hidden;
   overflow-y: scroll;
-  /* border: 1px solid black ; */
   scrollbar-gutter: 0px;
 }
 
@@ -79,7 +79,6 @@
   max-width: 16rem;
   display: flex;
   flex-direction: row;
-  /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15); */
   transition: box-shadow 0.1s ease-in-out;
 }
 
@@ -89,7 +88,6 @@ i.grip::after {
   max-width: 1rem;
   width: 1rem;
   display: inline-block;
-  /* color: #AAA; */
   font-style: normal;
   font-family: sans-serif;
   font-size:15px;
@@ -99,7 +97,6 @@ i.grip::after {
   margin-right:0.5rem;
   margin-top: 5px;
   margin-bottom: 5px;
-  /* border: 1px solid black; */
 }
 
 .regionScroll {
@@ -114,9 +111,9 @@ i.grip::after {
   position: relative;
   height: 100%;
   width: 1px;
-  border: 1px solid gray;
+  border: 1px solid #f59e0b; /* Amber color for visibility */
   top: 0;
-  /* z-index: 1000000 */
+  z-index: 100;
 }
 
 .trackInfoPlaceholder {
@@ -124,39 +121,51 @@ i.grip::after {
   min-width: 15rem;
   height: 100%;
   flex: 0;
-  /* background-color: gainsboro; */
   vertical-align: middle;
   text-align: right;
-  /* line-height: 100px; */
 }
 
 .trackPlaceholder {
   flex: 0;
-  background-color: gainsboro;
-  /* border: 1px solid black; */
   position: absolute;
   left: 0;
   width: 100%;
   vertical-align: middle;
   padding-left: 2rem;
+  color: hsl(215 20.2% 65.1%);
 }
 
 .dragMarker {
   position: absolute;
   height: 3px;
   width: 100%;
-  border: 1px solid gray;
+  background-color: #f59e0b;
   top: 0;
 }
 
 .dragging {
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);  
+  opacity: 0.7;
 }
 
 .regionPlaceholder {
-  border: 2px solid gray;
+  border: 2px solid #f59e0b;
   border-radius: 0.25rem;
-  background-color: rgba(0, 0, 0, 0.10);
+  background-color: rgba(245, 158, 11, 0.2);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);  
-  z-index: 1000000;
+  z-index: 1000;
+}
+
+.trackBgEven {
+  position: absolute;
+  width: 100%;
+  background-color: hsl(222 12% 18%);
+  border-bottom: 1px solid hsl(222 12% 22%);
+}
+
+.trackBgOdd {
+  position: absolute;
+  width: 100%;
+  background-color: hsl(222 12% 16%);
+  border-bottom: 1px solid hsl(222 12% 22%);
 }
