--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,10 @@
 @tailwind utilities;
 
 /* BlueprintJS styles */
-@import "~@blueprintjs/core/lib/css/blueprint.css";
-@import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
-@import "~@blueprintjs/select/lib/css/blueprint-select.css";
-@import "~@blueprintjs/table/lib/css/blueprint-table.css";
+@import "@blueprintjs/core/lib/css/blueprint.css";
+@import "@blueprintjs/icons/lib/css/blueprint-icons.css";
+@import "@blueprintjs/select/lib/css/blueprint-select.css";
+@import "@blueprintjs/table/lib/css/blueprint-table.css";
 
 @layer base {
   :root {
